# cjs_whole_new_world

./: .gitignore  Cargo.toml  Profile.sh  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml
assets/shaders/: lod_chunk.wgsl  voxel_chunk.wgsl
assets/textures/: voxels.xcf
assets_src/textures/: voxels.xcf
src/: main.rs
src/io/: mod.rs
src/oct_tree/: mod.rs
src/plugin/: beef.rs  better_chunk_map.rs  chunk_loader.rs  chunk_map.rs  chunk_pos.rs  control.rs  controller_2.rs  heckuva.rs  input.rs  loading.rs  mod.rs  region_saver.rs  saver.rs  voxel_material.rs
src/plugin/asset/: mod.rs
src/plugin/control/: controller_2.rs  input.rs  mod.rs  pause.rs
src/plugin/game_gui/: debug_ui.rs  loading_screen.rs  main_menu.rs  mod.rs  new_world.rs  pause_menu.rs  pause_settings_menu.rs  text_input.rs
src/plugin/game_settings/: mod.rs
src/plugin/oct_tree/: lod_chunk.rs  lod_pos.rs  lod_state.rs  lod_task.rs  lod_world.rs  mod.rs  oct_base.rs  oct_loader.rs
src/plugin/voxel_world/: beef.rs  chunk_pos_update.rs  lod_chunk_material.rs  mod.rs  region_saver.rs  world_info.rs  world_state.rs
src/voxel/: axis.rs  biome.rs  chunk.rs  chunk_mesh.rs  chunk_pos.rs  container.rs  mod.rs  neighbor_slice.rs  region.rs  voxels.rs  world_noise.rs
src/voxel/chunk_stuff/: chunk.rs  chunk_mesh.rs  chunk_pos.rs  container.rs  lod_mesh.rs  mod.rs  neighbor_slice.rs
src/voxel/region/: mod.rs  region_container.rs  region_handler.rs  region_maintainer.rs
