[package]
name = "cjs_whole_new_world"
version = "0.0.4"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bitvec = "1.0.1"
bevy_egui = "0.24.0"
leafwing-input-manager = "0.11.2"
noise = "0.8.2"
log = "0.4.20"
futures-lite = "2.2.0"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
