[package]
name = "cjs_whole_new_world"
version = "0.0.7"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bevy_asset_loader = "0.19.1"
bevy_rapier3d = { version = "0.24.0", features = ["enhanced-determinism", "debug-render-3d"] }
leafwing-input-manager = "0.11.2"
bitvec = "1.0.1"
noise = "0.8.2"
futures-lite = "2.2.0"
priority-queue = "1.3.2"
itertools = "0.12.0"
enum-iterator = "1.5.0"
num_enum = "0.7.2"
rand = "0.8.5"
stable-hash = "0.4.3"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
